# ELEC3850

./: Final Report.docx  README.md  SDL_joystick.h  xbox  xbox.c
personal_josh/: basic_pwm.py  drive_car_joystick.py
personal_radhika/: Raspberry Pi Packages (2_0).txt
personal_radhika/project_template_cpp_edit/: CMakeLists.txt  build.sh
personal_radhika/project_template_cpp_edit/include/: ELEC3850_client.hpp  header.hpp
personal_radhika/project_template_cpp_edit/lib/: CMakeLists.txt
personal_radhika/project_template_cpp_edit/src/: CMakeLists.txt  ELEC3850_client.cpp  main.cpp
personal_tom/: test.txt
personal_tom/cv2/: CMakeLists.txt  build.sh  test.txt
personal_tom/cv2/include/: ELEC3850_client.hpp  control.hpp  drawmarker.hpp  filefunctions.hpp  header.hpp  hsvhelper.hpp  imagefunctions.hpp  line.hpp  motorcontrol.hpp  pixy_getframe.hpp  subroutines.hpp  vision.hpp
personal_tom/cv2/lib/: CMakeLists.txt
personal_tom/cv2/lib/libpixyusb/: CMakeLists.txt
personal_tom/cv2/lib/socket.io-client-cpp/: Makefile  cmake_install.cmake
personal_tom/cv2/lib/socket.io-client-cpp/lib/: test.txt
personal_tom/cv2/lib/socket.io-client-cpp/lib/rapidjson/: test.txt
personal_tom/cv2/lib/socket.io-client-cpp/lib/websocketpp/websocketpp/transport/asio/security/: tls.hpp
personal_tom/cv2/lib/socket.io-client-cpp/test/echo_server/: package.json
personal_tom/cv2/src/: CMakeLists.txt  ELEC3850_client.cpp  control.cpp  drawmarker.cpp  filefunctions.cpp  hsvhelper.cpp  imagefunctions.cpp  line.cpp  main.cpp  motorcontrol.cpp  pca9685.c  pixy_getframe.cpp  subroutines.cpp  vision.cpp
personal_tom/cv2/web/: server.js  server.js~
personal_tom/cv2/web/public/: RC_index.html  RC_index.html~  RC_index_original.html
